fix: dark mode colors

--- a/styles.css
+++ b/styles.css
@@ -138,15 +138,15 @@ table tr.selected {
 }
 
 .datetimeshortcuts a {
-  @apply text-0 text-gray-400 transition hover:text-primary-500;
+  @apply text-0 text-gray-400 transition hover:text-gray-700;
 }
 
 .datetimeshortcuts a:first-child {
-  @apply ml-2 hover:text-primary-500 dark:text-gray-500 dark:hover:text-primary-600;
+  @apply ml-2 hover:text-gray-700 dark:text-gray-500 dark:hover:text-gray-200;
 }
 
 .datetimeshortcuts a:first-child:after {
-  @apply bg-white border flex h-9.5 items-center justify-center leading-none material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:bg-primary-200 hover:text-primary-500 dark:bg-gray-900 dark:border-gray-700;
+  @apply bg-white border flex h-9.5 items-center justify-center leading-none material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:bg-primary-200 hover:text-gray-700 dark:bg-gray-900 dark:border-gray-700;
   content: 'timer';
 }
 
@@ -155,11 +155,11 @@ table tr.selected {
 }
 
 .date-icon {
-  @apply block h-9.5 ml-2 text-gray-400 transition-all w-9.5 hover:text-primary-500 dark:text-gray-500 dark:hover:text-primary-600;
+  @apply block h-9.5 ml-2 text-gray-400 transition-all w-9.5 hover:text-gray-700 dark:text-gray-500 dark:hover:text-gray-200;
 }
 
 .date-icon:after {
-  @apply bg-white border h-9.5 items-center justify-center leading-none material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:text-primary-500 dark:bg-gray-900 dark:border-gray-700;
+  @apply bg-white border h-9.5 items-center justify-center leading-none material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:text-gray-700 dark:bg-gray-900 dark:border-gray-700;
   content: 'edit';
 }
 
@@ -168,11 +168,11 @@ table tr.selected {
 }
 
 .clock-icon {
-  @apply block h-9.5 ml-2 w-9.5 hover:text-primary-500 dark:text-gray-500 dark:hover:text-primary-600;
+  @apply block h-9.5 ml-2 w-9.5 hover:text-gray-700 dark:text-gray-500 dark:hover:text-gray-200;
 }
 
 .clock-icon:after {
-  @apply bg-white border h-9.5 items-center justify-center material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:text-primary-500 dark:bg-gray-900 dark:border-gray-700;
+  @apply bg-white border h-9.5 items-center justify-center material-symbols-outlined py-2 rounded shadow-sm text-base text-center w-9.5 hover:text-gray-700 dark:bg-gray-900 dark:border-gray-700;
   content: 'edit';
 }
 
